--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
@@ -6,90 +6,80 @@
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="800">
 
-    <StackPanel
-        Margin="{StaticResource PageContentContainerMargin}"
-        Orientation="Vertical">
-        <TextBlock
-            Style="{StaticResource TitleTextBlockStyle}"
-            Text="{loc:StringResource Key='Settings'}"/>
-        <!--Security Section-->
-        <StackPanel
-            Orientation="Vertical">
-            <TextBlock 
-                Style="{StaticResource SectionSubtitleTextBlockStyle}"
-                Text="{loc:StringResource Key='Security'}"/>
-            <StackPanel
-                Margin="{StaticResource ControlSectionMargin}"
-                Orientation="Vertical">
-                <ToggleSwitch
-                    Grid.Column="1"
-                    Header="{loc:StringResource Key='Autolock'}"
-                    IsOn="{Binding AllowAutolock}"/>
-                <TextBlock
-                    Style="{StaticResource CaptionTextBlockStyle}"
-                    Text="{loc:StringResource Key='Autolock_Description'}"/>
-            </StackPanel>
-            <StackPanel
-                Margin="{StaticResource ControlSectionMargin}"
-                Orientation="Vertical">
-                <ToggleSwitch
-                    Header="{loc:StringResource Key='Clear copied item data'}"
-                    Grid.Column="1"
-                    IsOn="{Binding AllowClearCopiedData}"/>
-                <TextBlock
-                    Style="{StaticResource CaptionTextBlockStyle}"
-                    Text="{loc:StringResource Key='Clear copied item data_Description'}"/>
-            </StackPanel>
-        </StackPanel>
+    <Grid Margin="{StaticResource PageContentContainerMargin}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         
-        <!--Language Section-->
-        <StackPanel
-            Orientation="Vertical">
-            <TextBlock 
-                Style="{StaticResource SectionSubtitleTextBlockStyle}"
-                Text="{loc:StringResource Key='Language'}"/>
-            <ComboBox
-                MinWidth="280"
-                Margin="{StaticResource ControlSectionMargin}"
-                Header="{loc:StringResource Key='Choose application language'}"
-                Grid.Column="1">
-                <x:String>English</x:String>
-                <x:String>Беларуская</x:String>
-            </ComboBox>
-        </StackPanel>
+        <TextBlock Text="{loc:StringResource Key='Settings'}"
+                   Style="{StaticResource HeaderTextBlockStyle}"/>
 
-        <!--Appearance Section-->
-        <StackPanel
-            Orientation="Vertical">
-            <TextBlock 
-                Style="{StaticResource SectionSubtitleTextBlockStyle}"
-                Text="{loc:StringResource Key='Appearance'}"/>
-            <ComboBox
-                MinWidth="280"
-                Margin="{StaticResource ControlSectionMargin}"
-                Header="{loc:StringResource Key='Theme'}"
-                Grid.Column="1">
-                <x:String>Light</x:String>
-                <x:String>Dark</x:String>
-                <x:String>Use system setting</x:String>
-            </ComboBox>
-        </StackPanel>
-        
-        <!--Other Section-->
-        <StackPanel
-            Orientation="Vertical">
-            <TextBlock 
-                Style="{StaticResource SectionSubtitleTextBlockStyle}"
-                Text="{loc:StringResource Key='Other'}"/>
-            <ToggleSwitch
-                Margin="{StaticResource ControlSectionMargin}"
-                Header="{loc:StringResource Key='Launch at startup'}"
-                Grid.Column="1"
-                IsOn="{Binding AllowLaunchAtStartup}"/>
-        </StackPanel>
-    </StackPanel>
+        <ScrollViewer Grid.Row="1">
+            <StackPanel Orientation="Vertical">
+                <!--Security Section-->
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{loc:StringResource Key='Security'}"
+                               Style="{StaticResource SectionSubtitleTextBlockStyle}"/>
+                    <StackPanel Orientation="Vertical"
+                                Margin="{StaticResource ControlSectionMargin}">
+                        <ToggleSwitch Grid.Column="1"
+                                      IsOn="{Binding AllowAutolock}"
+                                      Header="{loc:StringResource Key='Autolock'}"/>
+                        <TextBlock Style="{StaticResource CaptionTextBlockStyle}"
+                                   Text="{loc:StringResource Key='AutolockDescription'}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Vertical"
+                                Margin="{StaticResource ControlSectionMargin}">
+                        <ToggleSwitch Grid.Column="1"
+                                      IsOn="{Binding AllowClearCopiedData}"
+                                      Header="{loc:StringResource Key='ClearCopiedData'}"/>
+                        <TextBlock Style="{StaticResource CaptionTextBlockStyle}"
+                                   Text="{loc:StringResource Key='ClearCopiedDataDescription'}"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <!--Language Section-->
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{loc:StringResource Key='Language'}"
+                               Style="{StaticResource SectionSubtitleTextBlockStyle}"/>
+                    <ComboBox Grid.Column="1"
+                              Margin="{StaticResource ControlSectionMargin}"
+                              Header="{loc:StringResource Key='ChooseApplicationLanguage'}">
+                        <x:String>English</x:String>
+                        <x:String>Беларуская</x:String>
+                    </ComboBox>
+                </StackPanel>
+
+                <!--Appearance Section-->
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{loc:StringResource Key='Appearance'}"
+                               Style="{StaticResource SectionSubtitleTextBlockStyle}"/>
+                    <ComboBox Grid.Column="1"
+                              Header="{loc:StringResource Key='Theme'}"
+                              Margin="{StaticResource ControlSectionMargin}">
+                        <x:String>Light</x:String>
+                        <x:String>Dark</x:String>
+                        <x:String>Use system setting</x:String>
+                    </ComboBox>
+                </StackPanel>
+
+                <!--Other Section-->
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{loc:StringResource Key='Other'}"
+                               Style="{StaticResource SectionSubtitleTextBlockStyle}"/>
+                    <ToggleSwitch Grid.Column="1"
+                                  IsOn="{Binding AllowLaunchAtStartup}"
+                                  Margin="{StaticResource ControlSectionMargin}"
+                                  Header="{loc:StringResource Key='LaunchAtStartup'}"/>
+                </StackPanel>
+            </StackPanel>
+        </ScrollViewer>
+    </Grid>
 </abstract:PageBase>
